change to https

--- a/robogram.html
+++ b/robogram.html
@@ -7,7 +7,7 @@ permalink: /robogram/
 <div id="photos">
 </div>
 <script>
-  fetch('http://obscure-earth-22499.herokuapp.com/graphql', {
+  fetch('https://obscure-earth-22499.herokuapp.com/graphql', {
   method: 'POST',
   headers: {
     'Content-Type': 'application/json',
